--- a/FE/Views/Account/Login.cshtml
+++ b/FE/Views/Account/Login.cshtml
@@ -1,11 +1,33 @@
-﻿@model MODELS.USER.Requests.LoginRequest;
+﻿@model MODELS.USER.Requests.UsernameRequest;
 @{ 
     Layout = "~/Views/Shared/_LayoutAccount.cshtml";
 }
 
+<style>
+    .link-underline-opacity-75-hover:hover {
+        text-decoration: underline;
+        text-decoration-color: #473c38 !important;
+        color: #473c38
+    }
+
+    .divider {
+        font-size: 12px;
+        display: flex;
+        align-items: center;
+    }
+
+    .divider::before, .divider::after {
+        flex: 1;
+        content: '';
+        padding-top: 1px;
+        background-color: rgb(79, 79, 79);
+        margin: 5px;
+    }
+</style>
+
 <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
-    <div class="row align-items-center">
-        <div class="col-md-6">
+    <div class="row align-items-center justify-content-evenly" style="max-width: 1265px">
+        <div class="col-md-4">
             <div class="row">
                 <div class="col-md-12">
                     <span style=" font-size: 52px; font-weight: bold; color: #473c38;">LinkU</span>
@@ -15,27 +37,76 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4 bg-white rounded-4" , style="padding: 15px 10px 24px 10px; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;">
             @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "frmLogin" }))
             {
                 @Html.AntiForgeryToken()
-                <div>
-                    <div class="form-outline" data-mdb-input-init>
+                <div class="d-flex flex-column align-items-center">
+                    <div class="form-outline p-1" data-mdb-input-init>
                         <input type="text" asp-for="Username" class="form-control" />
-                        <label class="form-label" for="Username">Email hoặc số điện thoại</label>
-                        @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                        <label class="form-label" for="Username">Email hoặc số điện thoại*</label>
                     </div>
-                    <div class="form-outline" data-mdb-input-init>
-                        <input type="password" asp-for="Password" class="form-control" />
-                        <label class="form-label" for="Password">Mật khẩu</label>
-                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger", @style= "align-self: start;" })
+                    @*<div class="form-outline mb-3 p-1" data-mdb-input-init>
+                    <input type="password" asp-for="Password" class="form-control" />
+                    <label class="form-label" for="Password">Mật khẩu</label>
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>*@
+                    <button type="submit" class="btn btn-primary w-100 my-3" style="background-color: #473c38; color: white; max-width: 400px" data-mdb-ripple-init>Đăng nhập</button>
+                    <div class="d-flex w-100 justify-content-between">
+                        <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#" style="color: black">
+                            Tạo tài khoản mới
+                        </a>
+                        <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#" style="color: black">
+                            Quên mật khẩu?
+                        </a>
                     </div>
-                    <button type="submit" class="btn btn-primary" data-mdb-ripple-init>Đăng nhập</button>
-                    <a>Quên mật khẩu?</a>
-                    <hr class="hr" />
-                    <button type="button" class="btn btn-success" data-mdb-ripple-init>Tạo tài khoản mới</button>
                 </div>
             }
+            <div class="divider w-100 my-3">Hoặc</div>
+            <button type="button" class="btn btn-outline-dark w-100" style="max-width: 400px" data-mdb-ripple-init data-mdb-ripple-color="dark">
+                <span class="pe-1">
+                    <img src="~/asset/GgIcon.png" height="25" width="25" />
+                </span>
+                <span class="ps-1">
+                    Đăng nhập bằng Google
+                </span>
+            </button>
         </div>
-    </div>
+    </div>                                    
 </div>
+
+<script>
+    $(document).ready(function () {
+        $("#frmLogin").submit(async function (event) {
+            event.preventDefault();
+            if ($("#frmLogin").valid()) {
+                DangNhap();
+            }
+        });
+    });
+
+    function DangNhap() {
+        var data = $("#frmLogin").serialize();
+        showLoading(true)
+        $.ajax({
+            url: "@Url.Action("Login", "TaiKhoan")",
+            type: "POST",
+            data: data,
+            success: function (response) {
+                showLoading(false)
+                if (response.IsSuccess) {
+                    ShowThongBaoThanhCong(response.Message);
+                    setTimeout(function () {
+                        window.location.href = "/Home/Index"
+                    }, 1000);
+                } else {
+                    ShowThongBaoThatBai(response.Message)
+                }
+            },
+            error: function (xhr, error) {
+                ShowThongBaoThatBai(response.Message)
+            }
+        })
+    }
+</script>
