--- a/FE/Views/Account/Password.cshtml
+++ b/FE/Views/Account/Password.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODELS.USER.Requests.UsernameRequest;
+﻿@model MODELS.USER.Requests.LoginRequest
 @{
     Layout = "~/Views/Shared/_LayoutAccount.cshtml";
 }
@@ -29,8 +29,7 @@
             max-width: 360px;
             margin-bottom: 10px;
         }
-
-        #Title {
+        #Title{
             text-align: center
         }
     }
@@ -53,11 +52,25 @@
             {
                 @Html.AntiForgeryToken()
                 <div class="d-flex flex-column align-items-center">
-                    <div class="form-outline p-1" data-mdb-input-init>
-                        <input type="text" asp-for="Username" class="form-control" />
-                        <label class="form-label" for="Username">Email hoặc số điện thoại*</label>
+                    <div class="input-group">
+                        <div class="form-outline p-1 d-flex" data-mdb-input-init>
+                            <input type="text" asp-for="Username" class="form-control" readonly/>
+                            <label class="form-label" for="Username">Email hoặc số điện thoại*</label>
+                            <button type="button" class="btn btn-link btn-sm" data-mdb-ripple-init data-mdb-ripple-color="dark" style="padding-left: 12px; padding-right: 12px">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </button>
+                        </div>
                     </div>
-                    @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger", @style = "align-self: start;" })
+                    <div class="input-group">
+                        <div class="form-outline p-1 d-flex" data-mdb-input-init>
+                            <input type="text" asp-for="Username" class="form-control" readonly />
+                            <label class="form-label" for="Username">Email hoặc số điện thoại*</label>
+                            <button type="button" class="btn btn-link btn-sm" data-mdb-ripple-init data-mdb-ripple-color="dark" style="padding-left: 12px; padding-right: 12px">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </button>
+                        </div>
+                    </div>
+
                     <button type="submit" class="btn btn-primary w-100 my-3" style="background-color: #473c38; color: white;" data-mdb-ripple-init>Đăng nhập</button>
                     <div class="d-flex w-100 justify-content-between">
                         <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#" style="color: black">
@@ -79,10 +92,8 @@
                 </span>
             </button>
         </div>
-    </div>
+    </div>                                    
 </div>
-
-
 
 <script>
     $(document).ready(function () {
@@ -98,13 +109,14 @@
         var data = $("#frmLogin").serialize();
         showLoading(true)
         $.ajax({
-            url: "@Url.Action("CheckUsername", "Account")",
+            url: "@Url.Action("Login", "Account")",
             type: "POST",
             data: data,
             success: function (response) {
+                console.log(response)
                 showLoading(false)
                 if (response.isSuccess) {
-                    window.location.href = "/Account/Login/Password?Username=" + $("#Username").val();
+                    window.location.href = "@Url.Action("Index", "Home")"
                 } else {
                     ShowThongBaoThatBai(response.message)
                 }
