--- a/FE/wwwroot/css/site.css
+++ b/FE/wwwroot/css/site.css
@@ -1,3 +1,175 @@
 .navbar-toggler-icon {
     background-image: var(--mdb-navbar-toggler-icon-bg)!important;
 }
+
+/* Thông báo */
+#ThongBao-container {
+    position: fixed;
+    bottom: 1.5rem;
+    right: 1.5rem;
+    z-index: 8888;
+    display: block;
+    width: auto;
+}
+
+@keyframes toastDuration {
+    from {
+        width: 0%;
+    }
+
+    to {
+        Width: 100%;
+    }
+}
+
+.toast {
+    display: block;
+    width: 300px;
+    min-height: 3.75rem;
+    margin-bottom: 1rem;
+    border-radius: 5px;
+    box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2078431373);
+    background-color: hsl(240, 5%, 95%);
+    overflow: hidden;
+    --color-status: hsl(240, 5%, 40%);
+}
+
+.toast-status-icon {
+    display: block;
+    float: left;
+    height: 3.75rem;
+    width: 3rem;
+    padding: 1rem 0 1rem 0.5rem;
+}
+
+.toast-content {
+    display: block;
+    float: left;
+    width: calc(100% - 5.75rem);
+    padding: 0.75rem 1rem 0.75rem 0.5rem;
+    line-height: 1.25;
+    span
+    {
+        font-size: 18px;
+        font-weight: 700;
+        color: hsl(240, 5%, 40%);
+        line-height: inherit;
+    }
+
+    p 
+    {
+        font-size: 14px;
+        color: hsl(240, 5%, 20%);
+        line-height: inherit;
+        margin-top: 1px;
+    }
+}
+
+.toast-close {
+    display: block;
+    float: right;
+    clear: right;
+    width: 2.25rem;
+    height: 2.25rem;
+    margin-top: 0.25rem;
+    margin-right: 0.5rem;
+    padding: 0.5rem;
+    background: transparent;
+    background-color: transparent;
+    border-color: #00000000;
+    cursor: pointer;
+    i
+    {
+        display: block;
+        width: 100%;
+        height: 100%;
+        margin-right: 0;
+        margin-left: 0;
+        transform: none;
+    }
+
+}
+
+.toast-duration {
+    position: relative;
+    display: block;
+    float: none;
+    clear: both;
+    height: 3px;
+    width: 100%;
+    background-color: hsl(120, 70%, 80%);
+}
+
+.toast-duration::after {
+    display: block;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: inherit;
+    background-color: hsl(240, 5%, 50%);
+    animation-name: toastDuration;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+.success {
+    background: hsl(120, 70%, 95%);
+    .toast-close i::before
+    {
+        color: hsl(120, 70%, 40%);
+    }
+    span {
+        color: hsl(120, 70%, 40%);
+    }
+
+    p {
+        color: hsl(120, 70%, 30%);
+    }
+
+    .toast-duration {
+        background-color: hsl(120, 70%, 80%);
+    }
+
+    .toast-duration::after {
+        background-color: hsl(120, 70%, 40%);
+    }
+}
+
+.error {
+    background: hsl(5, 85%, 95%);
+    .toast-close i::before
+
+{
+    color: hsl(5, 85%, 50%);
+}
+
+span {
+    color: hsl(5, 85%, 50%);
+}
+
+p {
+    color: hsl(5, 85%, 30%);
+}
+
+.toast-duration {
+    background-color: hsl(5, 85%, 80%)
+}
+
+    .toast-duration::after {
+        background-color: hsl(5, 85%, 50%);
+    }
+
+}
+
+.blockUI.blockMsg.blockElement,
+.blockUI.blockMsg.blockPage {
+    border: 0 !important;
+    background-color: unset !important;
+}
+
+.loader-demo-box {
+    border: 0 !important;
+    justify-content: center;
+}
