Hoàng Nhi - Update code

--- a/FE/Views/Account/Login.cshtml
+++ b/FE/Views/Account/Login.cshtml
@@ -70,14 +70,14 @@
                 </div>
             }
             <div class="divider w-100 my-3">Hoặc</div>
-            <button type="button" class="btn btn-outline-dark w-100" data-mdb-ripple-init data-mdb-ripple-color="dark">
+            <a href="@Url.Action("SigninGoogle", "Account")" class="btn btn-outline-dark w-100" data-mdb-ripple-init data-mdb-ripple-color="dark">
                 <span class="pe-1">
                     <img src="~/asset/GgIcon.png" height="25" width="25" />
                 </span>
                 <span class="ps-1">
                     Đăng nhập bằng Google
                 </span>
-            </button>
+            </a>
         </div>
     </div>
 </div>
