--- a/FE/Views/Account/Password.cshtml
+++ b/FE/Views/Account/Password.cshtml
@@ -56,20 +56,16 @@
                         <div class="form-outline p-1 d-flex" data-mdb-input-init>
                             <input type="text" asp-for="Username" class="form-control" readonly/>
                             <label class="form-label" for="Username">Email hoặc số điện thoại*</label>
-                            <button type="button" class="btn btn-link btn-sm" data-mdb-ripple-init data-mdb-ripple-color="dark" style="padding-left: 12px; padding-right: 12px">
+                            <button type="button" class="btn btn-link btn-sm" onclick="BackToLogin()" data-mdb-ripple-init data-mdb-ripple-color="dark" style="padding-left: 12px; padding-right: 12px">
                                 <i class="fa-regular fa-pen-to-square"></i>
                             </button>
                         </div>
                     </div>
-                    <div class="input-group">
-                        <div class="form-outline p-1 d-flex" data-mdb-input-init>
-                            <input type="text" asp-for="Username" class="form-control" readonly />
-                            <label class="form-label" for="Username">Email hoặc số điện thoại*</label>
-                            <button type="button" class="btn btn-link btn-sm" data-mdb-ripple-init data-mdb-ripple-color="dark" style="padding-left: 12px; padding-right: 12px">
-                                <i class="fa-regular fa-pen-to-square"></i>
-                            </button>
-                        </div>
+                    <div class="form-outline p-1 d-flex mt-3" data-mdb-input-init>
+                        <input type="password" asp-for="Password" class="form-control" />
+                        <label class="form-label" for="Password">Mật khẩu</label>
                     </div>
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger", @style = "align-self: start;" })
 
                     <button type="submit" class="btn btn-primary w-100 my-3" style="background-color: #473c38; color: white;" data-mdb-ripple-init>Đăng nhập</button>
                     <div class="d-flex w-100 justify-content-between">
@@ -125,5 +121,9 @@
                 ShowThongBaoThatBai(error)
             }
         })
+    }
+
+    function BackToLogin() {
+        window.location.href = "@Url.Action("Login", "Account")" + "?Username=" + $("#Username").val()
     }
 </script>
