--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -24,12 +24,15 @@
 
     <style>
         body {
-            background-color: #f2f4f7
+            background-color: #f2f4f7;
+            font-weight: 500
         }
 
         .toast:not(.show) {
             display: block;
         }
+
+       
     </style>
 </head>
 <body>
